Responsividade, slider & playlist

--- a/pages/player/index.html
+++ b/pages/player/index.html
@@ -1,13 +1,14 @@
-<div class="page" id="player">
-    <ul class="navbar navbar-top">
-        <li>
-            <a href="javascript: closePopup();" onclick="showMiniPlayer();" class="active">
-                <div class='icon'>
-                    <i class="fa fa-chevron-left"></i> Voltar
-                </div>
-            </a>
-        </li>
-    </ul>
+<div class="page-popup" id="player">
+
+    <a
+        class="navbar active"
+        href="javascript: closePopup();"
+        onclick="showMiniPlayer();"
+    >
+        <div class='icon'>
+            <i class="fa fa-chevron-left"></i> Voltar
+        </div>
+    </a>
 
     <div class="player">
 
