--- a/pages/busca/index.html
+++ b/pages/busca/index.html
@@ -1,13 +1,8 @@
 <div class="page" id="busca">
-
-
-    <div class="search-div">
-
-        <div class="content search-results">
-
-
-
-        </div>
-
-    </div>
+<div class="home-content">
+<div class="search-div">
+<div class="content search-results">
+</div>
+</div>
+</div>
 </div>
